
[BUGFIX] minor value mapper bugfixes
* switch value mapper - sorting
* abstract value mapper - null values

[FEATURE] Multi-Value Evaluation "Any" and "All" (MEDO-564)

[TASK] clearly defined multi-value constructor including a default value

[TASK] enabled content resolvers for configurations needing a list of terms

[TASK] minor bugfixes, updates and code cleanup
* general content resolver does not pass glue to multi-values anymore
* evaluation: fixed list comparison
* evaluation: fixed findInList comparison

[FEATURE] Evaluations "Field" and "Index" (MEDO-563)

2.1.0

[FEATURE] Job Attributes "skipped" and "hash" (MEDO-566)

[FEATURE] Synchronous Submissions use Storage too (MEDO-570)

2.0.2

[BUGFIX] empty submission caused error during unpacking (LMSM21-188)

[BUGFIX] default content resolver was able to overwrite an empty value with a null value

[BUGFIX] fixed default content resolver for non-primitive field values

2.0.1

[BUGFIX] fixed field content resolver for invalid empty field names

2.0.0

[FEATURE] Asynchronous Submissions

1.2.2

[TASK] updated default route configuration

[BUGFIX] fixed configuration merge algorithm

1.2.1

[BUGFIX] fixed content resolver for non-existent and ignored fields

1.2.0

[FEATURE] new evaluation "key" to evaluate field names instead of field values

[FEATURE] new content resolver "field collector"

1.1.0

[FEATURE] refactored field mappers and defaults, now using only content resolvers

1.0.2

[BUGFIX] fixed behaviour for falling back to default configurations

1.0.1

[BUGFIX] fixed evaluation "required"

1.0.0

[TASK] code port from TYPO3, major adjustments in configuration structure and class/object registering process